fixing some horizontal scrolling. Close #53

--- a/src/assets/fabricator/styles/partials/_item.scss
+++ b/src/assets/fabricator/styles/partials/_item.scss
@@ -42,6 +42,10 @@
 	@include clearfix;
 }
 
+.f-item-scroll {
+	overflow-x: scroll;
+}
+
 .f-item-border-bottom {
 	border-bottom: 1px solid color(light);
 }
